--- a/requirements.txt
+++ b/requirements.txt
@@ -9,6 +9,7 @@ aiosignal==1.3.1
 altair==5.4.0
 annotated-types==0.7.0
 antiorm==1.2.1
+anyio
 appnope==0.1.4
 asgiref==3.8.1
 asttokens==2.4.1
@@ -177,7 +178,7 @@ netCDF4==1.7.2
 networkx==3.3
 nh3==0.2.18
 nltk==3.8.1
-numpy==1.26.4
+numpy
 oauthlib==3.2.2
 onnxruntime==1.19.2
 openai==1.42.0
