--- a/requirements.txt
+++ b/requirements.txt
@@ -1,314 +1,36 @@
-absl-py==2.1.0
-aenum==3.1.15
-affine==2.4.0
-aiofiles==24.1.0
-aiohappyeyeballs==2.4.0
-aiohttp==3.10.5
-aiolimiter==1.1.0
-aiosignal==1.3.1
-altair==5.4.0
-annotated-types==0.7.0
-antiorm==1.2.1
-appnope==0.1.4
-asgiref==3.8.1
-asttokens==2.4.1
-attrs==24.2.0
-backoff==2.2.1
-backports.tarfile==1.2.0
-bcrypt==4.2.0
-bidict==0.23.1
-blinker==1.8.2
-build==1.2.2
-cachetools==5.5.0
-cads-api-client==1.5.4
-catalogue==2.0.10
-cdsapi==0.7.4
-certifi==2024.7.4
-cffi==1.17.0
-charset-normalizer==3.3.2
-click==8.1.7
-click-plugins==1.1.1
-cligj==0.7.2
-cloudpathlib==0.20.0
-coloredlogs==15.0.1
-comm==0.2.2
-confection==0.1.5
-contourpy==1.3.1
-cryptography==42.0.7
-cycler==0.12.1
-cymem==2.0.8
-dataclasses-json==0.6.7
-db==0.1.1
-db-sqlite3==0.0.1
-debugpy==1.8.5
-decorator==5.1.1
-deepgram-sdk==3.5.0
-Deprecated==1.2.14
-deprecation==2.1.0
-dirtyjson==1.0.8
-distro==1.9.0
-docutils==0.21.2
-docx2txt==0.8
-executing==2.0.1
-fastapi==0.110.3
-filelock==3.14.0
-filetype==1.2.0
-flatbuffers==24.3.25
-fonttools==4.55.0
-frozenlist==1.4.1
-fsspec==2024.5.0
-GDriveOps==0.3.4
-gensim==4.3.3
-gevent==24.2.1
-gitdb==4.0.11
-GitPython==3.1.43
-google-api-core==2.19.1
-google-api-python-client==2.134.0
-google-auth==2.30.0
-google-auth-httplib2==0.2.0
-google-auth-oauthlib==1.2.0
-googleapis-common-protos==1.63.2
-googledrivedownloader==0.4
-greenlet==3.0.3
-groq==0.9.0
-grpcio==1.64.1
-gunicorn==20.1.0
-h11==0.14.0
-h5netcdf==1.4.1
-h5py==3.12.1
-httpcore==1.0.5
-httplib2==0.22.0
-httptools==0.6.1
-httpx==0.27.0
-huggingface-hub==0.23.2
-humanfriendly==10.0
-idna==3.7
-importlib_metadata==7.1.0
-importlib_resources==6.4.4
-InstructorEmbedding==1.0.1
-ipykernel==6.29.5
-ipython==8.26.0
-ipywidgets==8.1.3
-itsdangerous==2.2.0
-jaraco.classes==3.4.0
-jaraco.context==6.0.1
-jaraco.functools==4.0.2
-jedi==0.19.1
-Jinja2==3.1.4
-jiter==0.5.0
-jmespath==1.0.1
-joblib==1.4.2
-jsonpatch==1.33
-jsonpointer==3.0.0
-jsonschema==4.23.0
-jsonschema-specifications==2023.12.1
-jupyter_client==8.6.2
-jupyter_core==5.7.2
-jupyterlab_widgets==3.0.11
-keyring==25.4.1
-kiwisolver==1.4.7
-kubernetes==30.1.0
-langchain==0.2.14
-langchain-community==0.2.12
-langchain-core==0.2.34
-langchain-groq==0.1.9
-langchain-openai==0.1.22
-langchain-pinecone==0.1.1
-langchain-text-splitters==0.2.2
-langchain-voyageai==0.1.1
-langcodes==3.4.1
-langsmith==0.1.101
-language_data==1.2.0
-Lazify==0.4.0
-llama-cloud==0.0.13
-llama-index==0.10.64
-llama-index-agent-openai==0.2.9
-llama-index-cli==0.1.13
-llama-index-core==0.10.64
-llama-index-embeddings-huggingface==0.2.3
-llama-index-embeddings-openai==0.1.11
-llama-index-indices-managed-llama-cloud==0.2.7
-llama-index-legacy==0.9.48
-llama-index-llms-groq==0.1.4
-llama-index-llms-openai==0.1.29
-llama-index-llms-openai-like==0.1.3
-llama-index-multi-modal-llms-openai==0.1.9
-llama-index-program-openai==0.1.7
-llama-index-question-gen-openai==0.1.3
-llama-index-readers-file==0.1.33
-llama-index-readers-llama-parse==0.1.6
-llama-parse==0.4.9
-lxml==5.2.2
-marisa-trie==1.2.1
-markdown-it-py==3.0.0
-markdown2==2.4.13
-MarkupSafe==2.1.5
-marshmallow==3.22.0
-matplotlib==3.9.2
-matplotlib-inline==0.1.7
-mdurl==0.1.2
-minijinja==2.0.1
-mmh3==4.1.0
-monotonic==1.6
-more-itertools==10.5.0
-mpmath==1.3.0
-multidict==6.0.5
-multiurl==0.3.3
-murmurhash==1.0.10
-mypy-extensions==1.0.0
-narwhals==1.5.2
-nest-asyncio==1.6.0
-netCDF4==1.7.2
-networkx==3.3
-nh3==0.2.18
-nltk==3.8.1
-oauthlib==3.2.2
-onnxruntime==1.19.2
-openai==1.42.0
-opentelemetry-api==1.25.0
-opentelemetry-exporter-otlp==1.25.0
-opentelemetry-exporter-otlp-proto-common==1.25.0
-opentelemetry-exporter-otlp-proto-grpc==1.25.0
-opentelemetry-exporter-otlp-proto-http==1.25.0
-opentelemetry-instrumentation==0.46b0
-opentelemetry-instrumentation-asgi==0.46b0
-opentelemetry-instrumentation-fastapi==0.46b0
-opentelemetry-proto==1.25.0
-opentelemetry-sdk==1.25.0
-opentelemetry-semantic-conventions==0.46b0
-opentelemetry-util-http==0.46b0
-orjson==3.10.7
-outcome==1.3.0.post0
-overrides==7.7.0
-packaging==24.1
-pandas==2.2.2
-parso==0.8.4
-pdfminer.six==20231228
-pdfplumber==0.11.0
-pexpect==4.9.0
-pillow==10.4.0
-pinecone-client==3.2.2
-pkginfo==1.10.0
-platformdirs==4.2.2
-posthog==3.6.3
-preshed==3.0.9
-prompt_toolkit==3.0.47
-proto-plus==1.24.0
-protobuf==5.27.3
-psutil==6.0.0
-ptyprocess==0.7.0
-pure_eval==0.2.3
-pyarrow==17.0.0
-pyasn1==0.6.0
-pyasn1_modules==0.4.0
-PyAudio==0.2.14
-pycparser==2.22
-pydantic==2.8.2
-pydantic_core==2.20.1
-pydeck==0.9.1
-pygame==2.6.0
-Pygments==2.18.0
-PyJWT==2.8.0
-PyMuPDF==1.24.7
-PyMuPDFb==1.24.6
-pyparsing==3.1.2
-pypdf==4.3.1
-PyPDF2==3.0.1
-pypdfium2==4.30.0
-PyPika==0.48.9
-pyproject_hooks==1.1.0
-PySocks==1.7.1
-python-barcode==0.15.1
-python-dateutil==2.9.0.post0
-python-docx==1.1.2
-python-dotenv==1.0.1
-python-engineio==4.9.1
-python-multipart==0.0.9
-python-socketio==5.11.3
-pytracking==0.2.2
-pytz==2024.1
-PyYAML==6.0.2
-pyzmq==26.2.0
-qrcode==8.0
-rasterio==1.4.2
-readme_renderer==44.0
-redis==5.0.8
-referencing==0.35.1
-regex==2024.7.24
-requests==2.32.3
-requests-oauthlib==2.0.0
-requests-toolbelt==1.0.0
-rfc3986==2.0.0
-rich==13.7.1
-rouge-score==0.1.2
-rpds-py==0.20.0
-rsa==4.9
-s3transfer==0.10.1
-safetensors==0.4.3
-scikit-learn==1.5.0
-scipy==1.13.1
-selenium==4.22.0
-sentence-transformers==3.0.0
-shellingham==1.5.4
-simple-websocket==1.0.0
-six==1.16.0
-smart-open==7.0.4
-smmap==5.0.1
-sniffio==1.3.1
-sortedcontainers==2.4.0
-sounddevice==0.5.0
-soupsieve==2.5
-spacy==3.8.2
-spacy-legacy==3.0.12
-spacy-loggers==1.0.5
-SQLAlchemy==2.0.32
-srsly==2.4.8
-stack-data==0.6.3
-starlette==0.37.2
-streamlit==1.37.1
-striprtf==0.0.26
-sympy==1.12.1
-syncer==2.0.3
-tenacity==8.2.3
-thinc==8.3.2
-threadpoolctl==3.5.0
-tiktoken==0.7.0
-tokenizers==0.19.1
-toml==0.10.2
-tomli==2.0.1
-toolz==0.12.1
-torch==2.3.0
-tornado==6.4.1
-tqdm==4.66.5
-traitlets==5.14.3
-transformers==4.41.2
-trio==0.25.1
-trio-websocket==0.11.1
-twine==5.1.1
-typer==0.12.5
-typing-inspect==0.9.0
-typing_extensions==4.12.2
-tzdata==2024.1
-uptrace==1.24.0
-uritemplate==4.1.1
-urllib3==2.2.2
-uvicorn==0.25.0
-uvloop==0.20.0
-verboselogs==1.7
-voyageai==0.2.3
-wasabi==1.1.3
-watchfiles==0.20.0
-wcwidth==0.2.13
-weasel==0.4.1
-websocket==0.2.1
-websocket-client==1.8.0
-websockets==13.0
-Werkzeug==3.0.3
-widgetsnbextension==4.0.11
-wrapt==1.16.0
-wsproto==1.2.0
-xarray==2024.10.0
-yarl==1.9.4
-zipp==3.19.2
-zope.event==5.0
-zope.interface==7.0.1
+google-api-python-client
+google-auth
+google-auth-httplib2
+google-auth-oauthlib
+PyMuPDF
+PyPDF2
+python-docx
+jupyter_client
+jupyter_core
+jupyterlab_widgets
+langchain
+langchain-community
+langchain-core
+langchain-groq
+langchain-openai
+langchain-text-splitters
+langchain-voyageai
+langsmith
+llama-index
+llama-index-llms-groq
+nltk
+numpy
+oauthlib
+openai
+scikit-learn
+scipy
+streamlit
+threadpoolctl
+tiktoken
+tokenizers
+urllib3
+uvicorn
+voyageai
+websocket-client
+GDriveOps
+rouge-score
